// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  width: 470px;
  padding-right: 32px;
}

.emotion-3 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  padding-left: 40px;
  background-color: #3b3b3b;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+DQogICAgPHBhdGggZmlsbD0iIzgwODA4MCIgZD0iTTEzLjg1NyAxMi4zMTRoLS44MjNsLS4zMDgtLjMwOGE2LjQzOCA2LjQzOCAwIDAwMS42NDUtNC4zMkE2LjY3MiA2LjY3MiAwIDAwNy42ODYgMSA2LjY3MiA2LjY3MiAwIDAwMSA3LjY4NmE2LjY3MiA2LjY3MiAwIDAwNi42ODYgNi42ODUgNi40MzggNi40MzggMCAwMDQuMzItMS42NDVsLjMwOC4zMDh2LjgyM0wxNy40NTcgMTkgMTkgMTcuNDU3bC01LjE0My01LjE0M3ptLTYuMTcxIDBhNC42MSA0LjYxIDAgMDEtNC42MjktNC42MjggNC42MSA0LjYxIDAgMDE0LjYyOS00LjYyOSA0LjYxIDQuNjEgMCAwMTQuNjI4IDQuNjI5IDQuNjEgNC42MSAwIDAxLTQuNjI4IDQuNjI4eiIvPg0KPC9zdmc+');
}

.emotion-3::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-3::-moz-placeholder {
  font-style: italic;
}

.emotion-3:-ms-input-placeholder {
  font-style: italic;
}

.emotion-3::placeholder {
  font-style: italic;
}

.emotion-3:hover {
  border: 1px solid #808080;
}

.emotion-3:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-3::-webkit-input-placeholder {
  font-style: normal;
  color: #b3b3b3;
}

.emotion-3::-moz-placeholder {
  font-style: normal;
  color: #b3b3b3;
}

.emotion-3:-ms-input-placeholder {
  font-style: normal;
  color: #b3b3b3;
}

.emotion-3::placeholder {
  font-style: normal;
  color: #b3b3b3;
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-6 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #3A5DFF;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  padding-left: 4px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-13 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-13 tr {
  background-color: #252525;
}

.emotion-13 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-13 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-13 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-13 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-13 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-13 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-13 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-13 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-13 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-14 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-14:nth-of-type(2) {
  width: 100%;
}

.emotion-14:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: transparent;
  border: none;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  cursor: pointer;
  width: 100%;
  padding: 12px 16px;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-15:hover svg {
  color: #ffffff;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-16 {
  margin-left: 4px;
  color: transparent;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-25 {
  margin-left: 4px;
  color: #6088FE;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-27 {
  padding: 12px 16px;
}

.emotion-32 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-32:nth-of-type(2) {
  width: 100%;
}

.emotion-32:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-34 {
  cursor: pointer;
}

.emotion-35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #ebb52e;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-36:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-37 {
  text-align: center;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 32px;
  height: 32px;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
  color: #c92300;
}

.emotion-40:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #191919;
}

.emotion-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-43 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-43:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-43:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-44 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #009f22;
}

.emotion-44:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-44:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-45 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #ebb52e;
}

.emotion-45:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-45:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-46 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #0074f5;
}

.emotion-46:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-46:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-47 {
  position: relative;
  height: 100%;
}

.emotion-48 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  margin: -6px;
}

.emotion-48:hover,
.emotion-48.focus-visible:focus {
  color: #ffffff!important;
}

.emotion-50 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #b3b3b3;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-61 {
  height: 100%;
  -webkit-flex: 14 0 auto;
  -ms-flex: 14 0 auto;
  flex: 14 0 auto;
  background-color: #0074f5;
}

.emotion-61:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-61:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-65 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #009f22;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-74 {
  height: 100%;
  -webkit-flex: 8 0 auto;
  -ms-flex: 8 0 auto;
  flex: 8 0 auto;
  background-color: #009f22;
}

.emotion-74:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-74:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-75 {
  height: 100%;
  -webkit-flex: 4 0 auto;
  -ms-flex: 4 0 auto;
  flex: 4 0 auto;
  background-color: #0074f5;
}

.emotion-75:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-75:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-77 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4a4a4a;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-87 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #c92300;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-99 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #191919;
  background-color: #ebb52e;
  font-family: Roboto Condensed;
}

.emotion-117 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #009f22;
}

.emotion-117:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-117:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <input
          aria-label="Filter Job Name"
          className="emotion-3"
          onChange={[Function]}
          placeholder="Filter Job Name"
          type="search"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <h3
          className="emotion-6"
        >
          Jobs
          : 
          11
        </h3>
        <button
          className="emotion-7"
          onClick={[Function]}
          type="button"
        >
          <div
            className="emotion-8"
          >
            <svg
              className="emotion-9"
              color="#ffffff"
              data-file-name="refresh.svg"
              height={20}
            />
            <div
              className="emotion-10"
            >
              Refresh 
              Jobs
            </div>
          </div>
        </button>
      </div>
      <div
        className="emotion-11"
      >
        <div
          className="emotion-12"
        >
          <table
            className="emotion-13"
          >
            <thead>
              <tr>
                <th
                  className="emotion-14"
                >
                  <a
                    className="emotion-15"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Status
                    <svg
                      className="emotion-16"
                      data-file-name="back.svg"
                      height={18}
                    />
                  </a>
                </th>
                <th
                  className="emotion-14"
                >
                  <a
                    className="emotion-15"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Job Name
                    <svg
                      className="emotion-16"
                      data-file-name="back.svg"
                      height={18}
                    />
                  </a>
                </th>
                <th
                  className="emotion-14"
                >
                  <a
                    className="emotion-15"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Priority
                    <svg
                      className="emotion-16"
                      data-file-name="back.svg"
                      height={18}
                    />
                  </a>
                </th>
                <th
                  className="emotion-14"
                >
                  <a
                    className="emotion-15"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Created
                    <svg
                      className="emotion-25"
                      data-file-name="back.svg"
                      height={18}
                    />
                  </a>
                </th>
                <th
                  className="emotion-14"
                >
                  <div
                    className="emotion-27"
                  >
                    # Assets
                  </div>
                </th>
                <th
                  className="emotion-14"
                >
                  <div
                    className="emotion-27"
                  >
                    Errors
                  </div>
                </th>
                <th
                  className="emotion-14"
                >
                  <div
                    className="emotion-27"
                  >
                    Task Progress
                  </div>
                </th>
                <th
                  className="emotion-32"
                >
                  <div
                    className="emotion-33"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-35"
                  >
                    In Progress
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test-whitespace.json
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  100
                </td>
                <td>
                  2019-11-07 01:38:36
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td>
                  <div
                    className="emotion-39"
                  >
                    <a
                      className="emotion-40"
                      href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <svg
                        color="#c92300"
                        data-file-name="warning.svg"
                        height={20}
                      />
                    </a>
                  </div>
                </td>
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                      <div
                        className="emotion-44"
                      />
                      <div
                        className="emotion-45"
                      />
                      <div
                        className="emotion-46"
                      />
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-47"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-48"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-50"
                  >
                    Cancelled
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test-whitespace.json
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  100
                </td>
                <td>
                  2019-11-07 01:38:36
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td>
                  <div
                    className="emotion-39"
                  >
                    <a
                      className="emotion-40"
                      href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955/errors"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <svg
                        color="#c92300"
                        data-file-name="warning.svg"
                        height={20}
                      />
                    </a>
                  </div>
                </td>
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                      <div
                        className="emotion-44"
                      />
                      <div
                        className="emotion-45"
                      />
                      <div
                        className="emotion-61"
                      />
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-47"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-48"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-65"
                  >
                    Success
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test-whitespace.json
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  100
                </td>
                <td>
                  2019-11-07 01:36:29
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td>
                  <div
                    className="emotion-39"
                  >
                    <a
                      className="emotion-40"
                      href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955/errors"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <svg
                        color="#c92300"
                        data-file-name="warning.svg"
                        height={20}
                      />
                    </a>
                  </div>
                </td>
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                      <div
                        className="emotion-74"
                      />
                      <div
                        className="emotion-75"
                      />
                    </div>
                  </div>
                </td>
                <td />
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-77"
                  >
                    Archived
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test-whitespace.json
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  100
                </td>
                <td>
                  2019-11-07 01:35:36
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td>
                  <div
                    className="emotion-39"
                  >
                    <a
                      className="emotion-40"
                      href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955/errors"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <svg
                        color="#c92300"
                        data-file-name="warning.svg"
                        height={20}
                      />
                    </a>
                  </div>
                </td>
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                    </div>
                  </div>
                </td>
                <td />
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-87"
                  >
                    Failure
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test_officer
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  100
                </td>
                <td>
                  2019-10-11 21:11:03
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td>
                  <div
                    className="emotion-39"
                  >
                    <a
                      className="emotion-40"
                      href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954/errors"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <svg
                        color="#c92300"
                        data-file-name="warning.svg"
                        height={20}
                      />
                    </a>
                  </div>
                </td>
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-47"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-48"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-99"
                  >
                    Paused
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test_officer
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  100
                </td>
                <td>
                  2019-10-11 21:03:27
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td>
                  <div
                    className="emotion-39"
                  >
                    <a
                      className="emotion-40"
                      href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <svg
                        color="#c92300"
                        data-file-name="warning.svg"
                        height={20}
                      />
                    </a>
                  </div>
                </td>
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-47"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-48"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-65"
                  >
                    Success
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1585ca03-4db0-14d1-8edd-0a580a000926"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    flipbook_export_1
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  1
                </td>
                <td>
                  2019-08-01 22:52:19
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td />
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-117"
                      />
                    </div>
                  </div>
                </td>
                <td />
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-65"
                  >
                    Success
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702d-cbd6-1cce-a096-0a580a000920"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    export_7_8_2019
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  1
                </td>
                <td>
                  2019-07-08 18:53:44
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td />
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                    </div>
                  </div>
                </td>
                <td />
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-65"
                  >
                    Success
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702c-cbd6-1cce-a096-0a580a000920"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    export_7_8_2019___
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  1
                </td>
                <td>
                  2019-07-08 18:43:03
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td />
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                    </div>
                  </div>
                </td>
                <td />
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-65"
                  >
                    Success
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd91540-08c1-199f-b899-0a580a00091e"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    sdlc-testdata-import.json
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  100
                </td>
                <td>
                  2019-07-03 16:49:15
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td />
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                    </div>
                  </div>
                </td>
                <td />
              </tr>
              <tr
                className="emotion-34"
                onClick={[Function]}
              >
                <td>
                  <div
                    className="emotion-65"
                  >
                    Success
                  </div>
                </td>
                <td>
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    sdlc-testdata-import.json
                  </a>
                </td>
                <td
                  className="emotion-37"
                >
                  100
                </td>
                <td>
                  2019-07-03 01:29:41
                </td>
                <td
                  className="emotion-37"
                >
                  4
                </td>
                <td>
                  <div
                    className="emotion-39"
                  >
                    <a
                      className="emotion-40"
                      href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e/errors"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <svg
                        color="#c92300"
                        data-file-name="warning.svg"
                        height={20}
                      />
                    </a>
                  </div>
                </td>
                <td
                  style={
                    Object {
                      "minWidth": 244,
                      "overflow": "visible",
                    }
                  }
                >
                  <div
                    aria-label="Progress Bar"
                    className="emotion-41"
                    onKeyPress={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    <div
                      className="emotion-42"
                    >
                      <div
                        className="emotion-43"
                      />
                      <div
                        className="emotion-117"
                      />
                    </div>
                  </div>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
        <div>
           
        </div>
        <Pagination
          currentPage={1}
          totalPages={1}
        />
        <div>
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<Jobs /> should render properly with no jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  width: 470px;
  padding-right: 32px;
}

.emotion-3 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  padding-left: 40px;
  background-color: #3b3b3b;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+DQogICAgPHBhdGggZmlsbD0iIzgwODA4MCIgZD0iTTEzLjg1NyAxMi4zMTRoLS44MjNsLS4zMDgtLjMwOGE2LjQzOCA2LjQzOCAwIDAwMS42NDUtNC4zMkE2LjY3MiA2LjY3MiAwIDAwNy42ODYgMSA2LjY3MiA2LjY3MiAwIDAwMSA3LjY4NmE2LjY3MiA2LjY3MiAwIDAwNi42ODYgNi42ODUgNi40MzggNi40MzggMCAwMDQuMzItMS42NDVsLjMwOC4zMDh2LjgyM0wxNy40NTcgMTkgMTkgMTcuNDU3bC01LjE0My01LjE0M3ptLTYuMTcxIDBhNC42MSA0LjYxIDAgMDEtNC42MjktNC42MjggNC42MSA0LjYxIDAgMDE0LjYyOS00LjYyOSA0LjYxIDQuNjEgMCAwMTQuNjI4IDQuNjI5IDQuNjEgNC42MSAwIDAxLTQuNjI4IDQuNjI4eiIvPg0KPC9zdmc+');
}

.emotion-3::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-3::-moz-placeholder {
  font-style: italic;
}

.emotion-3:-ms-input-placeholder {
  font-style: italic;
}

.emotion-3::placeholder {
  font-style: italic;
}

.emotion-3:hover {
  border: 1px solid #808080;
}

.emotion-3:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-3::-webkit-input-placeholder {
  font-style: normal;
  color: #b3b3b3;
}

.emotion-3::-moz-placeholder {
  font-style: normal;
  color: #b3b3b3;
}

.emotion-3:-ms-input-placeholder {
  font-style: normal;
  color: #b3b3b3;
}

.emotion-3::placeholder {
  font-style: normal;
  color: #b3b3b3;
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-6 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #3A5DFF;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  padding-left: 4px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-12 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-13 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-13 tr {
  background-color: #252525;
}

.emotion-13 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-13 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-13 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-13 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-13 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-13 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-13 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-13 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-13 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-14 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-14:nth-of-type(2) {
  width: 100%;
}

.emotion-14:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: transparent;
  border: none;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  cursor: pointer;
  width: 100%;
  padding: 12px 16px;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-15:hover svg {
  color: #ffffff;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-16 {
  margin-left: 4px;
  color: transparent;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: transparent;
  border: none;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  cursor: pointer;
  width: 100%;
  padding: 12px 16px;
}

.emotion-24:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-24:hover svg {
  color: #ffffff;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-25 {
  margin-left: 4px;
  color: #6088FE;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-27 {
  padding: 12px 16px;
}

.emotion-32 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-32:nth-of-type(2) {
  width: 100%;
}

.emotion-32:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-34 {
  height: 100%;
  pointer-events: none;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <input
          aria-label="Filter Job Name"
          className="emotion-3"
          onChange={[Function]}
          placeholder="Filter Job Name"
          type="search"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <h3
          className="emotion-6"
        >
          Jobs
          : 
          0
        </h3>
        <button
          className="emotion-7"
          onClick={[Function]}
          type="button"
        >
          <div
            className="emotion-8"
          >
            <svg
              className="emotion-9"
              color="#ffffff"
              data-file-name="refresh.svg"
              height={20}
            />
            <div
              className="emotion-10"
            >
              Refresh 
              Jobs
            </div>
          </div>
        </button>
      </div>
      <div
        className="emotion-11"
      >
        <div
          className="emotion-12"
        >
          <table
            className="emotion-13"
          >
            <thead>
              <tr>
                <th
                  className="emotion-14"
                >
                  <a
                    className="emotion-15"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Status
                    <svg
                      className="emotion-16"
                      data-file-name="back.svg"
                      height={18}
                    />
                  </a>
                </th>
                <th
                  className="emotion-14"
                >
                  <a
                    className="emotion-15"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Job Name
                    <svg
                      className="emotion-16"
                      data-file-name="back.svg"
                      height={18}
                    />
                  </a>
                </th>
                <th
                  className="emotion-14"
                >
                  <a
                    className="emotion-15"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Priority
                    <svg
                      className="emotion-16"
                      data-file-name="back.svg"
                      height={18}
                    />
                  </a>
                </th>
                <th
                  className="emotion-14"
                >
                  <a
                    className="emotion-24"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Created
                    <svg
                      className="emotion-25"
                      data-file-name="back.svg"
                      height={18}
                    />
                  </a>
                </th>
                <th
                  className="emotion-14"
                >
                  <div
                    className="emotion-27"
                  >
                    # Assets
                  </div>
                </th>
                <th
                  className="emotion-14"
                >
                  <div
                    className="emotion-27"
                  >
                    Errors
                  </div>
                </th>
                <th
                  className="emotion-14"
                >
                  <div
                    className="emotion-27"
                  >
                    Task Progress
                  </div>
                </th>
                <th
                  className="emotion-32"
                >
                  <div
                    className="emotion-33"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-34"
              >
                <td
                  colSpan={8}
                >
                  <div
                    className="emotion-35"
                  >
                    <div
                      className="emotion-36"
                    >
                      <svg
                        data-file-name="noJobs.svg"
                        width={200}
                      />
                      <div>
                        There are currently no jobs in the queue.
                      </div>
                      <div>
                        Any new job will appear here.
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
]
`;
